# GoIT-WEB-module5

./: README.md  config.py  main.py  privat_api.py  pyproject.toml
logs/: exchange.txt
utils/: data_conversion.py  date_utils.py  file_logger.py
web_socket_exchange/: client.html  main.js  server.py
