[tool.poetry]
name = "goit-web-module5"
version = "0.1.0"
description = ""
authors = ["nataliia.tiutiunnyk@imubit.com <nataliia.tiutiunnyk@imubit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
names = "^0.3.0"
aiohttp = "^3.9.1"
requests = "^2.31.0"
tabulate = "^0.9.0"
aiofile = "^3.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
